--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,13 @@
+
+# Server
 SERVER_PORT=5000
+
+# Smartcar
 SMARTCAR_CLIENT_ID=5a7d0f24-5a49-46ae-8795-7fda0a57cdf6
 SMARTCAR_CLIENT_SECRET=dfc19aeb-1c61-4f38-bc5c-89013efc406e
 SMARTCAR_REDIRECT_URI=http://localhost:5000/smartcar/exchange
+
+# Postgres DB
+POSTGRES_DB=ev-charging-analyser
+POSTGRES_USER=pguser
+POSTGRES_PASSWORD=719915f9-e9eb-480e-a6ba-5c9fa60ce830
