Added prisma user migration

--- a/server/.env
+++ b/server/.env
@@ -11,4 +11,4 @@ SMARTCAR_REDIRECT_URI=http://localhost:5000/smartcar/exchange
 POSTGRES_DB=ev-charging-analyser
 POSTGRES_USER=pguser
 POSTGRES_PASSWORD=719915f9-e9eb-480e-a6ba-5c9fa60ce830
-POSTGRES_PRISMA_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
+POSTGRES_PRISMA_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
