--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 
 # Server
 SERVER_PORT=5000
+JWT_KEY=3588da7e-1e02-48a5-8504-91b467210d80
 
 # Smartcar
 SMARTCAR_CLIENT_ID=5a7d0f24-5a49-46ae-8795-7fda0a57cdf6
