Separates Docker and local configuration

--- a/server/config/dev.env
+++ b/server/config/dev.env
@@ -12,4 +12,4 @@ SMARTCAR_REDIRECT_URI=http://localhost:5000/smartcar/exchange
 POSTGRES_DB=ev-charging-analyser
 POSTGRES_USER=pguser
 POSTGRES_PASSWORD=719915f9-e9eb-480e-a6ba-5c9fa60ce830
-POSTGRES_PRISMA_URL="postgresql://pguser:719915f9-e9eb-480e-a6ba-5c9fa60ce830@localhost:5432/ev-charging-analyser?schema=public"
+POSTGRES_PRISMA_URL="postgresql://pguser:719915f9-e9eb-480e-a6ba-5c9fa60ce830@postgres:5432/ev-charging-analyser?schema=public"
