--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
+    "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
@@ -34,6 +35,7 @@
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
     "react-query": "^3.31.0",
+    "yup": "^0.32.11",
     "zustand": "^3.6.4"
   },
   "devDependencies": {
