Fixes issues with Docker system

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY yarn.lock ./
+COPY prisma ./prisma/
 
 RUN yarn install
 
@@ -20,6 +21,7 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY yarn.lock ./
+COPY prisma ./prisma/
 
 RUN yarn install --production
 
