--- a/server/package.json
+++ b/server/package.json
@@ -66,6 +66,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "tsd-jsdoc": "^2.5.0",
     "typescript": "^4.3.5"
   },
   "jest": {
