--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -15,9 +15,20 @@ services:
       - 9229:9229
     command: yarn start:dev
     networks:
+      - api-cassandra
       - api-postgres
     depends_on:
+      - cassandra
       - postgres
+
+  cassandra:
+    image: cassandra:4.0
+    ports:
+      - 9042:9042
+    volumes:
+      - cassandra:/var/lib/cassandra
+    networks:
+      - api-cassandra
 
   postgres:
     image: postgres:14.1-alpine
@@ -36,6 +47,8 @@ services:
       - api-postgres
 
 networks:
+  api-cassandra: null
   api-postgres: null
 volumes:
+  cassandra: null
   pgdata: null
