--- a/server/config/dev.env
+++ b/server/config/dev.env
@@ -8,6 +8,13 @@ SMARTCAR_CLIENT_ID=5a7d0f24-5a49-46ae-8795-7fda0a57cdf6
 SMARTCAR_CLIENT_SECRET=dfc19aeb-1c61-4f38-bc5c-89013efc406e
 SMARTCAR_REDIRECT_URI=http://localhost:5000/smartcar/exchange
 
+# Cassandra DB
+CASSANDRA_CONTACT_POINT="0.0.0.0"
+CASSANDRA_LOCAL_DATA_CENTER=local
+CASSANDRA_KEYSPACE=ev-charging-analyser
+CASSANDRA_USER=cassandrauser
+CASSANDRA_PASSWORD=b9d02764-87b7-4151-8783-466a403e48fd
+
 # Postgres DB
 POSTGRES_DB=ev-charging-analyser
 POSTGRES_USER=pguser
