Passes through Environment variables

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -23,6 +23,12 @@ services:
 
   cassandra:
     image: cassandra:4.0
+    environment:
+      CASSANDRA_CONTACT_POINT: ${CASSANDRA_CONTACT_POINT}
+      CASSANDRA_LOCAL_DATA_CENTER: ${CASSANDRA_LOCAL_DATA_CENTER}
+      CASSANDRA_KEYSPACE: ${CASSANDRA_KEYSPACE}
+      CASSANDRA_USER: ${CASSANDRA_USER}
+      CASSANDRA_PASSWORD: ${CASSANDRA_PASSWORD}
     ports:
       - 9042:9042
     volumes:
