--- a/app.json
+++ b/app.json
@@ -33,7 +33,8 @@
         "googleMaps": {
           "apiKey": "AIzaSyCLr7QxPcXrGqkLMQ8v6XAy3X0kiZniB7s"
         }
-      }
+      },
+      "package": "com.maxwillkelly.evcharginganalyser"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
