--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.1.1",
     "axios": "^0.24.0",
     "color": "3.2.1",
     "expo": "~43.0.0",
@@ -33,6 +34,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.28.1",
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "3.3.2",
