--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.24.0",
     "color": "3.2.1",
+    "date-fns": "^2.28.0",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
