--- a/app.json
+++ b/app.json
@@ -19,20 +19,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "config": {
-        "googleMapsApiKey": "AIzaSyCLr7QxPcXrGqkLMQ8v6XAy3X0kiZniB7s"
-      }
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "config": {
-        "googleMaps": {
-          "apiKey": "AIzaSyCLr7QxPcXrGqkLMQ8v6XAy3X0kiZniB7s"
-        }
       },
       "package": "com.maxwillkelly.evcharginganalyser"
     },
