--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.24.0",
     "color": "3.2.1",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
