--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.28.1",
     "react-native-paper": "^4.10.1",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
